# Cross-Zero

./: CMakeLists.txt
include/: Board.h  BoardTest.h  BoardView.h  NCursesBoardView.h
src/: Board.cpp  BoardTest.cpp  BoardView.cpp  NCursesBoardView.cpp  StdioBoardView.cpp  Test.cpp  main.cpp  test.cpp
test/: BoardTest.cpp
